# Mathology

./: .breakpoints  .replit  LICENSE  README.md  app.py  pyproject.toml
templates/: aboutuspreview.html  comments.html  home.html  mystyles.css  navbar.html
